************************
*** Vxxxx
*** New solver : stationaryGroundwater2DFoam
************************

### Solvers

- groundwater2DFoam

  - water bilan added (with stationary option to stop run)
  - dhmax is relative to the max of hwater field
  - potentialEqn is solved instead of hwater equation (identical to stationary)

-porousScalarTransportFoam

  - mass balance added for C tracer for each non-wall patch and injection
  wellbores. Results are displayed in terminal and CSV file (see tutorials)

- stationaryGroundwater2DFoam

  - "stationary" version of groundwater2DFoam
  - fixedPotentialList added in transportProperties (optional)

- stationaryGroundwaterFoam

  - "stationary" version of groundwaterFoam (Richards's equation)

### Tutorials

- groundwater2DFoam

  - updated to be similar to the stationary case

- stationaryGroundwater2DFoam

  - new tutorial relative to the new solver

- stationaryGroundwaterFoam

  - new tutorial relative to the new solver

### Libraries

- toolsGIS

  - new library containing classes for GIS manipulation
  - first class is MNT file used to read xyz file and performed
    bilinear interpolation.

### Utilities

- setFieldsFromMNT

  - new utility to initialize fields using MNTfile class with bilinear
  interpolation

- setFieldsFromXY

  - new option to add offset to interpolated value (also in setFieldsFromMNT)

************************
*** V1809
*** New solvers : groundwater2DFoam + groundwaterTransportFoam
************************

### Solvers

- groundwaterFoam

  - wellbore added to handle injection/extraction
  
- impesFoam/anisoImpesFoam/groundwaterFoam

  - wellboreProperies is a subDict of transportProperties
  - Winj/Wext (wellbore positions) are moved from 0/ to constant/

- porousScalarTransportFoam

  - retard coefficient "R" added
  - new time-stepping (using dCmax absolute and relative)

- groundwater2DFoam

  - new solver for 2D groundwater flow modeling (Dupuit's hypothesis)

- groundwaterTransportFoam
